Version 1.6.6 - 2011-12-26
* Bug fixes (see mercurial logs for details)

Version 1.6.5 - 2011-10-01
* Bug fixes (see mercurial logs for details)

Version 1.6.4 - 2011-05-29
* Bug fixes (see mercurial logs for details)

Version 1.6.3 - 2011-02-13
* Bug fixes (see mercurial logs for details)

Version 1.6.2 - 2010-11-02
* Bug fixes (see mercurial logs for details)

Version 1.6.1 - 2010-07-29
* Bug fixes (see mercurial logs for details)
* Make _timestamp numeric instead of datetime to work with XML-RPC and JSON-RPC

Version 1.6.0 - 2010-05-08
* Bug fixes (see mercurial logs for details)
* Add symbol parameter to formatLang
* searcher on Function fields take only one domain clause as argument
* Use a Reference field on ir.attachment to store resource informations
  Improve the ir.attachment views to be usable on the client side
* Use basic access authentication for XML-RPC
* Replace child{1,2} attributes in xml views by a unique child
* Models that uses _inherits will search in inherited parents for missing functions
* Remove ids from on_change* calls
* Improve search on translatable fields
* export_data return empty value for invisible fields
* Don't allow to use float in Numeric fields
* set/get function on Fields take a list of ids
* New interface for Function/Property fields
  Take a Field as first argument instead of many separate arguments
  Remove static arguments
* Fix Float and Numeric for lost of precision
* Add decimal digits validation on fields
* Improve unittests to run trytond from tests
  Use sqlite as default backend
  Add skiptest attribute to data tag
  Add option to test_tryton to run tests from all modules
* Add MySQL backend
* Refactoring by validation with pylint
* Modify ondelete attribute of Many2One according to required attribute value
* Refactor import_data of ModelStorage
* Raise exception when search function is missing on Function fields
* Add LRU memoization, use it to cache compiled code for safe_eval.